refactor: Room 목록 조회 필터링 필드 추가